--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "koa-cors": "^0.0.16",
     "koa-logger": "3.2.1",
     "koa-router": "12.0.0",
-    "mongoose": "5.11.18",
+    "mongoose": "6.8.0",
     "swagger-jsdoc": "^6.2.5",
     "uuid": "9.0.0",
     "yup": "^0.32.11"
@@ -60,7 +60,7 @@
     "jest": "25.1.0",
     "jest-fetch-mock": "^3.0.3",
     "jest-junit": "15.0.0",
-    "mongodb-memory-server-global": "6.9.3",
+    "mongodb-memory-server": "8.10.2",
     "reload-server-webpack-plugin": "1.0.1",
     "supertest": "^6.3.3",
     "webpack": "5.75.0",
